LiveActor: fast add/remove for visitedList + added doco